se creo carpeta ejercicio-practica-dom

--- a/ejercicio-practica-DOM/cambiar-text.html
+++ b/ejercicio-practica-DOM/cambiar-text.html
@@ -1,3 +1,7 @@
+Ejercicio 1: Cambiar el Texto de un Elemento
+Enunciado:
+Crea una página con un párrafo que tenga un texto inicial. Debes agregar un botón que, al hacer clic en él, cambie el texto del párrafo a "¡Texto actualizado!". me ayudas con este ejercicio
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
