--- a/propiedades-atributos/propie-innerHTML.html
+++ b/propiedades-atributos/propie-innerHTML.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 
-    <dive id="myDiv">
+    <div id="myDiv">
         <p>Este es un párrafo.</p>
         <p>Este es otro párrafo.</p>
-    </dive>
+    </div>
 
     <div id="myListContainer">
         <ul id="myList"></ul>
