--- a/html/ejercicios2.html
+++ b/html/ejercicios2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <script src="/js/ejercicio2.js"></script>
+    <script src="/ejercicios-js/js/ejercicio2.js"></script>
     
 </body>
 </html>
